src/objects/QPMS__Non_Conformance_Type__c.object
<CustomObject>
    <fields>
        <fullName>QPMS__Active__c</fullName>
        <formula>ISPICKVAL(QPMS__Status__c , &apos;Active&apos;)</formula>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Allow_Workflow_Configuration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Workflow Configuration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Group_Name__c</fullName>
        <label>Approval Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Group__c</fullName>
        <label>Approval Group</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Closure_Auto_Approval_Submission__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closure Auto Approval Submission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Enable_Risk_Assessment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Risk Assessment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Initiating_Site_Security__c</fullName>
        <label>Initiating Site Security</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Initiating_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Initiating Site</label>
        <referenceTo>QPMS__Manufacturing_Site__c</referenceTo>
        <relationshipName>NC_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Number_Scheme__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Number Scheme</label>
        <referenceTo>QPMS__Number_Scheme__c</referenceTo>
        <relationshipName>NC_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Owner_Name__c</fullName>
        <formula>Owner:User.FirstName + &apos; &apos; +Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Product_Information__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Purpose__c</fullName>
        <description>Purpose for NC Type details</description>
        <label>Purpose</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Reason__c</fullName>
        <description>This field is used to store the reason value in NC Type</description>
        <label>Reason</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Reporter_Information__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reporter Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Resolution_Approval_Mandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Resolution Approval Mandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Signed_Off_Details__c</fullName>
        <label>Signed Off Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>In-Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Title__c</fullName>
        <externalId>true</externalId>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Type_Text__c</fullName>
        <description>Used In SOSL (This is a copy of Type FIeld)</description>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Type__c</fullName>
        <inlineHelpText>選擇產品或過程進行分類的事件。基於此字段中，“選擇產品”或顯示“選擇處理”字段。</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Process</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>OOT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__User_Information__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User Information</label>
        <type>Checkbox</type>
    </fields>
    <label>NC Template</label>
    <listViews>
        <fullName>QPMS__All</fullName>
        <columns>NAME</columns>
        <columns>QPMS__Type__c</columns>
        <columns>QPMS__Title__c</columns>
        <columns>QPMS__Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>QPMS__Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>NCT-{0000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NC Template Types</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>